--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 
                     <p>
                         <span id="calendar">Date</span><br><br>
-                        <span id="greeting">Hello, Hideki!</span>
+                        <span id="greeting">Hello, Kimura!</span>
                     </p>
 
                 </div>
