minor text and url changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- My CSS -->
+        <!-- CSS -->
         <link rel="stylesheet" href="css/style.css">
 
         <!-- Google Fonts -->
@@ -47,15 +47,14 @@
                 <div class="box programming">
                     <img src="imgs/code.svg" alt="Programming">
                     <p class="card-text">
-                        <a class="programming-tag" href="https://github.com/">Github</a><br>
+                        <a class="programming-tag" href="https://github.com/kimurarh">Github</a><br>
                         <a class="programming-tag" href="https://www.udemy.com/">Udemy</a><br>
                     </p>
                 </div>
             </div>
-        </div> 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        </div>
 
-        <!-- My JavaScript -->
+        <!-- JavaScript -->
         <script type="text/javascript" src="js/script.js"></script>
 
     </body>
