--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
 
     <body>
         <div id="container">
+
+            <!-- Greeting Info-->
             <div id="info">
                     <h1 id="calendar" class="font-weight-bold">Date</h1>
                     <h2 id="greeting">Hello there!</h2>
             </div>
             
+            <!-- Links Boxes -->
             <div id="boxes">
                 <div class="box social">
                     <img src="imgs/users.svg" alt="Social">
@@ -39,6 +42,7 @@
                     <p class="box-text">
                         <a class="university-tag" href="https://portaldoaluno.ufpr.br/aluno/"><span class="short-text">Portal</span><span class="long-text">Portal do Aluno</span></a><br>
                         <a class="university-tag" href="https://moodle.c3sl.ufpr.br/"><span class="short-text">Moodle</span><span class="long-text">Moodle C3SL</span></a><br>
+                        <a class="university-tag" href="https://ufprvirtual.ufpr.br/"><span class="short-text">Virtual</span><span class="long-text">UFPR Virtual</span></a><br>
                         <a class="university-tag" href="https://webmail.inf.ufpr.br/">Webmail</a><br>
                         <a class="university-tag" href="https://intranet.ufpr.br/intranet/public/principal.action">Intranet</a><br>
                     </p>
